<resources>
    <string name="app_name">Nadab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>

    <string name="item_1">Home</string>
    <string name="item_2">User Agreement</string>
    <string name="item_3">Contact Owner</string>
    <string name="item_4">Help</string>
    <string name="item_5">Settings</string>
    <string name="item_6">Sign Out</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="delete">DELETE</string>


    <string name="help_support">Help \u0026 Support</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>

    <string name="termsconditions">By clicking REGISTER you agree all the terms \u0026 conditions.</string>
    <string name="already_user">Already have Account? Login here.</string>


    <string name="read"><![CDATA[Read terms & conditions]]></string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Nadab!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant table!
    </string>

    <string name="slide_2_title">Meals and Drinks</string>
    <string name="slide_2_desc">Order your desired meals and drinks!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">Five star Hotels</string>
    <string name="slide_4_desc">View five star hotel menus from your phone!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="notifications">Notifications</string>
    <string name="discounts_and_offers">Discounts &amp; Offers</string>
    <string name="hotels">Hotels</string>


    <string name="quantity">Quantity</string>
    <string name="brew_tea">ADD TO CART</string>
    <string name="initial_cost">Kshs. 0.00</string>
    <string name="initial_quantity">1</string>
    <string name="total">Total</string>
    <string name="price">PRICE: </string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign out</string>
    <string name="contact_us">Contact Us</string>
    <string name="conditions">Terms and conditions</string>

    <string name="default_notification_channel_id">564</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_fees">Fees</string>

</resources>
