<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_register"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/logo_height"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/ic_profile_pic"
                tools:ignore="VectorDrawableCompat" />
            <TextView
                android:id="@+id/ti_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/child_margin_top"
                android:text="---Add Profile Picture---"
                android:layout_below="@+id/ivImage"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_first"
                android:layout_marginTop="@dimen/child_margin_top">

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_phone"
                    android:hint="Mobile Number"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_mobileNumber"
                android:layout_marginTop="@dimen/child_margin_top"
                tools:ignore="NotSibling">

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_name"
                    android:hint="User Name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_yourEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_fullName"
                android:layout_marginTop="@dimen/child_margin_top"
                tools:ignore="NotSibling">

                <EditText
                    android:id="@+id/your_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_emails"
                    android:hint="Email Address"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_yourEmail"
                android:layout_marginTop="@dimen/child_margin_top"
                app:passwordToggleContentDescription="@string/name"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                tools:ignore="NotSibling,UnknownId">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:ems="10"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_password"
                android:layout_marginTop="@dimen/child_margin_top"
                app:passwordToggleContentDescription="@string/name"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                tools:ignore="NotSibling">

                <EditText
                    android:id="@+id/passwordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_password"
                    android:ems="10"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/termsconditions"
                android:layout_below="@+id/ti_passwordAgain"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/read_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_below="@id/terms_conditions"
                android:padding="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/read"
                android:textSize="15sp" />

            <Button
                android:id="@+id/addCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addCustomer"
                android:layout_below="@+id/read_terms_conditions"
                android:layout_marginTop="@dimen/button_margin"
                android:paddingLeft="@dimen/button_padding"
                android:text="Register"
                android:textColor="@color/colorAccent"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_below="@id/addCustomer"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:text="@string/already_user"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/login_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/already_user"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:visibility="invisible" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>


